--- a/app/src/main/res/layout/fragment_crm.xml
+++ b/app/src/main/res/layout/fragment_crm.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".FragmentCRM">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cv"
         android:layout_width="match_parent"
@@ -66,6 +67,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/cv">
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -148,8 +154,11 @@
             </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
 
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </RelativeLayout>
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
