--- a/app/src/main/res/layout/activity_payment_dynamic.xml
+++ b/app/src/main/res/layout/activity_payment_dynamic.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/spin_kit"
+        style="@style/SpinKitView.Large.Pulse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:SpinKit_Color="@color/colorAccent" />
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -57,7 +74,7 @@
                     android:padding="20dp">
 
                     <Button
-                        android:id="@+id/btn_pay"
+                        android:id="@+id/send"
                         android:layout_width="wrap_content"
                         android:layout_height="45dp"
                         android:background="@drawable/round_button"
@@ -76,3 +93,4 @@
     </ScrollView>
 
 </LinearLayout>
+</RelativeLayout>
