--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#037ef3</color>
-    <color name="colorPrimaryDark">#037ef3</color>
+    <color name="colorPrimaryDark">#448aff</color>
     <color name="colorAccent">#037ef3</color>
     <color name="heading_dark">#484848</color>
     <color name="heading_light">#696969</color>
