--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -127,6 +127,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_below="@+id/rv_categorylist2"
+                android:layout_marginBottom="10dp"
                 android:layout_marginTop="25dp">
 
                 <TextView
