--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -69,16 +69,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginBottom="20dp"
                     android:fontFamily="@font/brandontext_medium"
                     android:text="@string/newly_launched_products"
                     android:textColor="@color/heading_dark"
                     android:textSize="24sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_marginTop="2dp"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="match_parent"
                     android:id="@+id/rv_productlist1">
                 </androidx.recyclerview.widget.RecyclerView>
 
