--- a/app/src/main/res/layout/item_product_grid_list.xml
+++ b/app/src/main/res/layout/item_product_grid_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <!--<TextView
             android:id="@+id/heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
         <com.example.neelanshsethi.recko.ExpandableHeightGridView
             android:id="@+id/productgridview"
@@ -39,7 +39,7 @@
             android:verticalSpacing="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/heading">
+            app:layout_constraintTop_toTopOf="parent">
 
         </com.example.neelanshsethi.recko.ExpandableHeightGridView>
     </androidx.constraintlayout.widget.ConstraintLayout>
