--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -54,6 +54,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                        android:id="@+id/youtube_player_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:videoId="hxHZSedHbP4"
+                        app:autoPlay="false"
+                        app:showFullScreenButton="false"
+                        app:showYouTubeButton="true"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView"
                         android:layout_width="0dp"
@@ -69,14 +81,67 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
-                        <ImageView
-                            android:id="@+id/video_thumbnail"
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@drawable/sample"
+                            android:id="@+id/video_thumbnail_container"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <ImageView
+                                android:id="@+id/video_thumbnail"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/video_icon_work"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <View
+                                android:id="@+id/translucent"
+                                android:layout_width="200dp"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/round_pink_card"
+                                app:layout_constraintEnd_toEndOf="@+id/video_thumbnail"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginEnd="180dp"
+                                android:layout_marginBottom="8dp"
+                                android:background="@drawable/play_icon"
+                                app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/video_thumbnail_text"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="150dp"
+                                android:layout_marginTop="8dp"
+                                android:fontFamily="@font/brandontext_medium"
+                                android:inputType="textMultiLine"
+                                android:textColor="@color/background"
+                                android:textSize="20sp"
+                                android:textStyle="bold"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <!--<ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_marginEnd="200dp"
+                                android:layout_marginBottom="100dp"
+                                android:background="@drawable/ellipse_54"
+                                app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
+                                app:layout_constraintEnd_toEndOf="parent" />-->
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
                     </androidx.cardview.widget.CardView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
