--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="navigation_bar_inactive">#707070</color>
     <color name="white">#ffffff</color>
     <color name="transparent">#00ffffff</color>
-    <color name="background">#dddddd</color>
+    <color name="background">#fbf7f7</color>
     <color name="gray">#d3d3d3</color>
 </resources>
