--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="white">#ffffff</color>
     <color name="transparent">#00ffffff</color>
     <color name="background">#fbf7f7</color>
+    <color name="background_yt">#ff000000</color>
     <color name="gray">#d3d3d3</color>
 </resources>
