--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:id="@+id/product_root"
     tools:context=".ProductDetails">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -612,5 +613,61 @@
         android:textSize="22sp"
         android:textStyle="bold"
         tools:targetApi="lollipop" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/custom_image_root"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:visibility="invisible">
+
+        <ImageView
+            android:id="@+id/image_pamplet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/sample_pamphlet"/>
+
+        <TextView
+            android:id="@+id/textview1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/brandontext_medium"
+            android:text="Contact Name: "
+            app:layout_constraintStart_toStartOf="@+id/image_pamplet"
+            app:layout_constraintTop_toBottomOf="@+id/image_pamplet" />
+
+        <TextView
+            android:id="@+id/name_pamplet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/brandontext_medium"
+            android:text="Khagesh"
+            app:layout_constraintStart_toEndOf="@+id/textview1"
+            app:layout_constraintTop_toBottomOf="@+id/image_pamplet" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/brandontext_medium"
+            android:text="Contact No: "
+            app:layout_constraintStart_toStartOf="@+id/textview1"
+            app:layout_constraintTop_toBottomOf="@+id/textview1" />
+
+        <TextView
+            android:id="@+id/number_pamplet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="900"
+            app:layout_constraintStart_toStartOf="@+id/name_pamplet"
+            app:layout_constraintTop_toTopOf="@+id/textView13" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
