--- a/app/src/main/res/layout/product_grid_card.xml
+++ b/app/src/main/res/layout/product_grid_card.xml
@@ -45,6 +45,9 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/brandontext_medium"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit ="marquee_forever"
                     android:text="@string/car_loan"
                     android:textColor="@color/heading_dark"
                     android:textSize="18sp"
