--- a/app/src/main/res/layout/activity_learn_how_it_works.xml
+++ b/app/src/main/res/layout/activity_learn_how_it_works.xml
@@ -26,12 +26,10 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="h,16:9"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/Skip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
