--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="background">#fbf7f7</color>
     <color name="background_yt">#ff000000</color>
     <color name="gray">#d3d3d3</color>
+    <color name="black">#000000</color>
 </resources>
