--- a/app/src/main/res/layout/item_product_grid_list.xml
+++ b/app/src/main/res/layout/item_product_grid_list.xml
@@ -25,11 +25,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />-->
 
+        <!--
+        android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"-->
+
         <com.example.neelanshsethi.recko.ExpandableHeightGridView
             android:id="@+id/productgridview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:numColumns="2"
