explore ui from zapplin

--- a/app/src/main/res/layout/item_product_grid_list.xml
+++ b/app/src/main/res/layout/item_product_grid_list.xml
@@ -34,14 +34,15 @@
             android:id="@+id/productgridview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:gravity="center"
             android:numColumns="2"
             android:paddingBottom="10dp"
-            android:gravity="center"
             android:scrollbars="none"
-            android:verticalSpacing="20dp"
+            android:verticalSpacing="24dp"
+            android:horizontalSpacing="22dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
