--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -75,6 +75,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/brandontext_medium"
+                    android:lineSpacingExtra="7sp"
                     android:text="@string/videos_to_help_you_sell_better"
                     android:textColor="@color/heading_dark"
                     android:textSize="24sp" />
