--- a/app/src/main/res/layout/product_grid_card.xml
+++ b/app/src/main/res/layout/product_grid_card.xml
@@ -14,11 +14,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/productcard"
-            android:layout_width="170dp"
+            android:layout_width="144dp"
             android:layout_height="0dp"
+            android:background="@drawable/shadow_192610"
             app:cardBackgroundColor="#ffffff"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="2dp"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="3dp"
             app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="h,144:168"
@@ -30,10 +31,10 @@
 
                 <ImageView
                     android:id="@+id/imgproduct"
-                    android:layout_width="170dp"
+                    android:layout_width="144dp"
                     android:layout_height="0dp"
                     android:src="@drawable/sample2"
-                    app:layout_constraintDimensionRatio="h,16:8"
+                    app:layout_constraintDimensionRatio="h,144:72"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -41,18 +42,17 @@
                     android:id="@+id/titleproduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginBottom="8dp"
-                    android:fontFamily="@font/brandontext_medium"
-                    android:singleLine="true"
                     android:ellipsize="marquee"
-                    android:marqueeRepeatLimit ="marquee_forever"
+                    android:fontFamily="@font/brandontext_medium"
+                    android:lineSpacingExtra="6sp"
+                    android:marqueeRepeatLimit="marquee_forever"
                     android:scrollHorizontally="true"
+                    android:singleLine="true"
                     android:text="@string/car_loan"
                     android:textColor="@color/heading_dark"
-                    android:textSize="18sp"
-                    app:layout_constraintBottom_toTopOf="@+id/earnupto"
+                    android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imgproduct" />
 
@@ -60,11 +60,11 @@
                     android:id="@+id/earnupto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     android:fontFamily="@font/brandontext_regular"
                     android:text="@string/_10_products_sold"
                     android:textColor="#8b8b8b"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@+id/titleproduct"
                     app:layout_constraintTop_toBottomOf="@+id/titleproduct" />
 
@@ -76,7 +76,7 @@
                     android:fontFamily="@font/brandontext_medium"
                     android:text="@string/_10_000"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/rupee_symbol"
                     app:layout_constraintStart_toEndOf="@+id/rupee_symbol" />
 
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/sale"
                     android:textColor="#8b8b8b"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/amountproduct"
                     app:layout_constraintStart_toEndOf="@+id/amountproduct" />
 
@@ -106,12 +106,11 @@
                     android:id="@+id/upto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
                     android:fontFamily="@font/brandontext_regular"
                     android:text="@string/upto"
                     android:textColor="#8b8b8b"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@+id/earnupto"
                     app:layout_constraintTop_toBottomOf="@+id/earnupto" />
 
 
