--- a/app/src/main/res/layout/product_grid_card.xml
+++ b/app/src/main/res/layout/product_grid_card.xml
@@ -40,7 +40,7 @@
 
                 <TextView
                     android:id="@+id/titleproduct"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="12dp"
@@ -94,10 +94,10 @@
                     android:id="@+id/rupee_symbol"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="4dp"
+                    android:fontFamily="@font/brandontext_regular"
                     android:text="@string/u20b9"
                     android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/brandontext_regular"
                     android:textSize="16sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/upto"
                     app:layout_constraintStart_toEndOf="@+id/upto" />
