--- a/app/src/main/res/layout/item_product_grid_list.xml
+++ b/app/src/main/res/layout/item_product_grid_list.xml
@@ -34,15 +34,15 @@
             android:id="@+id/productgridview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="@dimen/_22sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             android:gravity="center"
             android:numColumns="2"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/_8sdp"
             android:scrollbars="none"
-            android:verticalSpacing="24dp"
-            android:horizontalSpacing="22dp"
+            android:verticalSpacing="@dimen/_20sdp"
+            android:horizontalSpacing="@dimen/_17sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
