--- a/app/src/main/res/layout/product_grid_card.xml
+++ b/app/src/main/res/layout/product_grid_card.xml
@@ -14,12 +14,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/productcard"
-            android:layout_width="144dp"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="0dp"
             android:background="@drawable/shadow_192610"
             app:cardBackgroundColor="#ffffff"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="3dp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="@dimen/_3sdp"
             app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="h,144:168"
@@ -31,9 +31,10 @@
 
                 <ImageView
                     android:id="@+id/imgproduct"
-                    android:layout_width="144dp"
+                    android:layout_width="@dimen/_120sdp"
                     android:layout_height="0dp"
                     android:src="@drawable/sample2"
+                    android:adjustViewBounds="true"
                     app:layout_constraintDimensionRatio="h,144:72"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -44,6 +45,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="12dp"
+                    android:maxLines = "2"
+                    android:minLines = "2"
                     android:ellipsize="marquee"
                     android:fontFamily="@font/brandontext_medium"
                     android:lineSpacingExtra="6sp"
