--- a/app/src/main/res/layout/company_grid_card.xml
+++ b/app/src/main/res/layout/company_grid_card.xml
@@ -17,9 +17,10 @@
             android:layout_width="@dimen/_130sdp"
             android:layout_height="0dp"
             app:cardBackgroundColor="#ffffff"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="2dp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="@dimen/_3sdp"
             app:cardUseCompatPadding="true"
+            app:cardPreventCornerOverlap="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="h,144:168"
             app:layout_constraintTop_toTopOf="parent">
