--- a/app/src/main/res/layout/company_grid_card.xml
+++ b/app/src/main/res/layout/company_grid_card.xml
@@ -52,7 +52,7 @@
                     android:scrollHorizontally="true"
                     android:text="@string/car_loan"
                     android:textColor="@color/heading_dark"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/_13ssp"
                     app:layout_constraintBottom_toTopOf="@+id/earnupto"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imgcompany" />
