--- a/app/src/main/res/layout/industry_small_card.xml
+++ b/app/src/main/res/layout/industry_small_card.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/_13sdp"
         >
 
         <androidx.cardview.widget.CardView
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="#ffffff"
-            app:cardCornerRadius="10dp"
+            app:cardCornerRadius="@dimen/_8sdp"
             app:cardUseCompatPadding="true"
             app:cardElevation="0dp"
             app:layout_constraintTop_toTopOf="parent">
@@ -29,10 +29,10 @@
 
                 <ImageView
                     android:id="@+id/img_small_industry"
-                    android:layout_width="140dp"
+                    android:layout_width="@dimen/_100sdp"
                     android:layout_height="0dp"
                     android:src="@drawable/sample2"
-                    app:layout_constraintDimensionRatio="h,4:3"
+                    app:layout_constraintDimensionRatio="h,120:90"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -44,12 +44,12 @@
             android:id="@+id/title_small_industry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_7sdp"
             android:fontFamily="@font/brandontext_medium"
             android:text="@string/byjus"
             android:textColor="@color/heading_dark"
-            android:textSize="18sp"
+            android:textSize="@dimen/_15ssp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/categorycard"
             tools:ignore="HardcodedText" />
@@ -61,7 +61,7 @@
             android:fontFamily="@font/brandontext_regular"
             android:text="@string/_100_products"
             android:textColor="#8b8b8b"
-            android:textSize="16sp"
+            android:textSize="@dimen/_13ssp"
             app:layout_constraintStart_toStartOf="@+id/title_small_industry"
             app:layout_constraintTop_toBottomOf="@+id/title_small_industry" />
 
