--- a/app/src/main/res/layout/company_grid_card.xml
+++ b/app/src/main/res/layout/company_grid_card.xml
@@ -29,14 +29,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <View
+                    android:id="@+id/imgcompany_container"
+                    android:layout_width="@dimen/_130sdp"
+                    android:layout_height="0dp"
+                    android:background="#f5f5f5"
+                    app:layout_constraintDimensionRatio="h,16:8"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+                </View>
+
                 <ImageView
+                    android:id="@+id/imgcompany"
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_45sdp"
+                    android:src="@drawable/byju"
+                    app:layout_constraintBottom_toBottomOf="@+id/imgcompany_container"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/imgcompany_container" />
+
+
+                <!--<ImageView
                     android:id="@+id/imgcompany"
                     android:layout_width="@dimen/_130sdp"
                     android:layout_height="0dp"
                     android:src="@drawable/sample2"
                     app:layout_constraintDimensionRatio="h,16:8"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent" />-->
 
                 <TextView
                     android:id="@+id/titlecompany"
@@ -55,7 +76,7 @@
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintBottom_toTopOf="@+id/earnupto"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imgcompany" />
+                    app:layout_constraintTop_toBottomOf="@+id/imgcompany_container" />
 
                 <TextView
                     android:id="@+id/earnupto"
