--- a/app/src/main/res/layout/item_categories_list.xml
+++ b/app/src/main/res/layout/item_categories_list.xml
@@ -29,14 +29,15 @@
             android:id="@+id/categorygridview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:numColumns="2"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/_8sdp"
             android:gravity="center"
             android:scrollbars="none"
-            android:verticalSpacing="20dp"
+            android:verticalSpacing="@dimen/_10sdp"
+            android:horizontalSpacing="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/heading">
