--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -78,7 +78,7 @@
                     android:lineSpacingExtra="7sp"
                     android:text="@string/videos_to_help_you_sell_better"
                     android:textColor="@color/heading_dark"
-                    android:textSize="24sp" />
+                    android:textSize="@dimen/_16ssp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_videolist"
@@ -122,7 +122,7 @@
                     android:fontFamily="@font/brandontext_medium"
                     android:text="@string/your_industries"
                     android:textColor="@color/heading_dark"
-                    android:textSize="24sp" />
+                    android:textSize="@dimen/_16ssp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
